changed contact us page

--- a/index.html
+++ b/index.html
@@ -349,10 +349,10 @@
                 include:
               </p>
               <div style="margin-top: -2rem; margin-bottom: 2rem">
-                <li>Property rentals</li>
+                <!-- <li>Property rentals</li>
                 <li>Sales and purchases</li>
                 <li>Property valuations</li>
-                <li>Investment advice</li>
+                <li>Investment advice</li> -->
               </div>
             </div>
 
@@ -361,7 +361,7 @@
               <div class="value__accordion-item">
                 <header class="value__accordion-header">
                   <i class="ri-shield-cross-fill value__accordion-icon"></i>
-                  <h3 class="value__accordion-title">Rent Deal</h3>
+                  <h3 class="value__accordion-title">Property rentals</h3>
                   <div class="value__accordion-arrow">
                     <i class="ri-arrow-down-s-fill"></i>
                   </div>
@@ -380,7 +380,7 @@
                     icon="ph:x-square-fill"
                     class="value__accordion-icon"
                   ></iconify-icon>
-                  <h3 class="value__accordion-title">Sale Deal</h3>
+                  <h3 class="value__accordion-title">Sales and purchases</h3>
                   <div class="value__accordion-arrow">
                     <i class="ri-arrow-down-s-fill"></i>
                   </div>
@@ -396,17 +396,17 @@
               <div class="value__accordion-item">
                 <header class="value__accordion-header">
                   <i class="ri-bar-chart-box-fill value__accordion-icon"></i>
-                  <h3 class="value__accordion-title">
-                    Best prices on the market
-                  </h3>
+                  <h3 class="value__accordion-title">Property valuations</h3>
                   <div class="value__accordion-arrow">
                     <i class="ri-arrow-down-s-fill"></i>
                   </div>
                 </header>
                 <div class="value__accordion-content">
                   <p class="value__accordion-description">
-                    Our price rates are well below the market prices. We do our
-                    best to provide the best rates to our clients.
+                    Get accurate and professional property valuations to help
+                    you make informed real estate decisions. Whether buying,
+                    selling, or investing, we provide trusted assessments
+                    tailored to the market
                   </p>
                 </div>
               </div>
@@ -414,17 +414,16 @@
               <div class="value__accordion-item">
                 <header class="value__accordion-header">
                   <i class="ri-checkbox-fill value__accordion-icon"></i>
-                  <h3 class="value__accordion-title">Security of your data</h3>
+                  <h3 class="value__accordion-title">Investment advice</h3>
                   <div class="value__accordion-arrow">
                     <i class="ri-arrow-down-s-fill"></i>
                   </div>
                 </header>
                 <div class="value__accordion-content">
                   <p class="value__accordion-description">
-                    Clients data is well secured in our company. We never ask
-                    for clients sensitive data. Our company have regular
-                    security audits. We also offer the strong customer support.
-                    Your data is always our secret.
+                    Receive expert investment advice tailored to the real estate
+                    market. Our insights help you maximize returns and make
+                    smart, informed decisions for your property portfolio
                   </p>
                 </div>
               </div>
@@ -562,22 +561,6 @@
 
                 <button class="button contact__card-button">
                   <a href="https://wa.me/+923331372497">Chat Now</a>
-                </button>
-              </div>
-
-              <div class="contact__card-box">
-                <div class="contact__card-info">
-                  <i class="ri-mail-send-fill"></i>
-                  <div>
-                    <h3 class="contact__card-title">Send us a mail</h3>
-                    <p class="contact__card-description">
-                      <!-- hamzashakeel <span>durrani</span> <span>77@gmail.com</span>  -->
-                    </p>
-                  </div>
-                </div>
-
-                <button class="button contact__card-button">
-                  <a href="contact.html">Mail Us </a>
                 </button>
               </div>
 
