--- a/employes.html
+++ b/employes.html
@@ -140,7 +140,7 @@
         <h2 class="section__title">Management Department <span>.</span></h2>
         <div class="team-container">
           <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
+            <img src="images/ramish b mana.jpg" alt="" class="team-img" />
             <h3 class="team-name">Ramaish B. Mana</h3>
             <p class="team-position">Team Led</p>
           </div>
@@ -160,16 +160,15 @@
         <h2 class="section__title">Our Sale/Rent Department<span>.</span></h2>
         <div class="team-container">
           <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
+            <img src="images/sheraz.jpg" alt="" class="team-img" />
             <h3 class="team-name">Chaudhry Sheraz</h3>
-            <p class="team-position">Specialist</p>
-            <p class="team-position">Sale/Rent</p>
+            <p class="team-position">Operational manager</p>
           </div>
 
           <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
+            <img src="images/shahzaib.jpg" alt="" class="team-img" />
             <h3 class="team-name">Chaudhry Shahzaib</h3>
-            <p class="team-position">Rent Specialist</p>
+            <p class="team-position">Rent/Sale Specialist</p>
           </div>
 
           <div class="team-details">
@@ -187,20 +186,20 @@
           </div>
 
           <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
+            <img src="images/bankar jevan.jpg" alt="" class="team-img" />
             <h3 class="team-name">Bankar Jeevan</h3>
             <p class="team-position">Specialist</p>
             <p class="team-position">Sale/Rent</p>
           </div>
 
           <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
+            <img src="images/rafique.jpg" alt="" class="team-img" />
             <h3 class="team-name">Rafique Umer</h3>
-            <p class="team-position">Rent Specialist</p>
+            <p class="team-position">Rent/Sale Specialist</p>
           </div>
 
           <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
+            <img src="images/zafar.jpg" alt="" class="team-img" />
             <h3 class="team-name">Zafar Chuhan</h3>
             <p class="team-position">Inventory Manager</p>
           </div>
@@ -390,11 +389,6 @@
           <div class="team-details">
             <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Gul Hassan</h3>
-          </div>
-
-          <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
-            <h3 class="team-name">Ghulam Rasool</h3>
           </div>
 
           <div class="team-details">
