removed team people and removed a logo

--- a/employes.html
+++ b/employes.html
@@ -146,8 +146,8 @@
           </div>
 
           <div class="team-details">
-            <img src="images/team5.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Salman Rasheed</h3>
+            <img src="images/sheraz.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Chaudhry Sheraz</h3>
             <p class="team-position">Operational Manager</p>
           </div>
         </div>
@@ -160,9 +160,9 @@
         <h2 class="section__title">Our Sale/Rent Department<span>.</span></h2>
         <div class="team-container">
           <div class="team-details">
-            <img src="images/sheraz.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Chaudhry Sheraz</h3>
-            <p class="team-position">Operational manager</p>
+            <img src="images/team5.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Salman Rasheed</h3>
+            <p class="team-position">Booking Specialist</p>
           </div>
 
           <div class="team-details">
@@ -217,6 +217,7 @@
             <img src="images/team8.jpg" alt="" class="team-img" />
             <h3 class="team-name">Chaudhry Shahnawaz</h3>
             <p class="team-position">Marketing Director</p>
+            <p class="team-position">Property Consultant</p>
           </div>
 
           <div class="team-details">
@@ -267,18 +268,12 @@
             <h3 class="team-name">Rana Waseem Adv</h3>
             <p class="team-position">Legal Advisor and Consultant</p>
           </div>
-
-          <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
-            <h3 class="team-name">Govinda Ram</h3>
-            <p class="team-position">Legal Department</p>
-          </div>
         </div>
       </div>
     </section>
 
     <!-- -----------------------------------Our Maintenance Department ------------------------------------------ -->
-    <section class="popular section" id="popular">
+    <!-- <section class="popular section" id="popular">
       <div class="container">
         <h2 class="section__title">
           Our Maintenance Department <span>.</span>
@@ -292,7 +287,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- -----------------------------------alumini------------------------------------------ -->
     <section class="popular section" id="popular">
@@ -326,12 +321,6 @@
 
           <div class="team-details">
             <img src="images/dummy.png" alt="" class="team-img" />
-            <h3 class="team-name">Mohsin Sheikh</h3>
-            <p class="team-position">Specialist Rent/Sale</p>
-          </div>
-
-          <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Chaudhry Hafeez</h3>
             <p class="team-position">Specialist Rent/Sale</p>
           </div>
@@ -340,16 +329,6 @@
             <img src="images/a6.jpg" alt="" class="team-img" />
             <h3 class="team-name">Gohar Bhatti</h3>
             <p class="team-position">Specialist Rent/Sale</p>
-          </div>
-
-          <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
-            <h3 class="team-name">Noman Ahmed</h3>
-          </div>
-
-          <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
-            <h3 class="team-name">Mohsin Sheikh</h3>
           </div>
 
           <div class="team-details">
@@ -371,39 +350,9 @@
           </div>
 
           <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
-            <h3 class="team-name">Mr. Austin</h3>
-          </div>
-
-          <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
-            <h3 class="team-name">Irfan Sheikh</h3>
-          </div>
-
-          <div class="team-details">
             <img src="images/a7.jpg" alt="" class="team-img" />
             <h3 class="team-name">Zain Samejo</h3>
             <p class="team-position">Office Boy</p>
-          </div>
-
-          <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
-            <h3 class="team-name">Gul Hassan</h3>
-          </div>
-
-          <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
-            <h3 class="team-name">Muhammad Ali</h3>
-          </div>
-
-          <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
-            <h3 class="team-name">Jamshair</h3>
-          </div>
-
-          <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
-            <h3 class="team-name">Mohd Mehboob</h3>
           </div>
         </div>
       </div>
