--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <!-- -----------------------------------Companies------------------------------------------ -->
       <div class="companies">
         <div class="companies-wrapper">
-          <img src="images/c1.png" alt="" />
+          <!-- <img src="images/c1.png" alt="" /> -->
           <img src="images/c2.png" alt="" />
           <img src="images/c3.png" alt="" />
           <img src="images/c4.png" alt="" />
