--- a/employes.html
+++ b/employes.html
@@ -178,8 +178,8 @@
             <p class="team-position">Sale/Rent</p>
           </div>
 
-          <div class="team-details">
-            <img src="images/bankar jevan.jpg" alt="" class="team-img" />
+          <div class="team-details2">
+            <img src="images/bankar jevan.jpg" alt="" class="banker" />
             <h3 class="team-name">Bankar Jeevan</h3>
             <p class="team-position">Specialist</p>
             <p class="team-position">Sale/Rent</p>
@@ -346,6 +346,12 @@
             <img src="images/a7.jpg" alt="" class="team-img" />
             <h3 class="team-name">Zain Samejo</h3>
             <p class="team-position">Office Boy</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/dummy.png" alt="" class="team-img" />
+            <h3 class="team-name">Mohsen Sheikh</h3>
+            <!-- <p class="team-position">Office Boy</p> -->
           </div>
         </div>
       </div>
