--- a/employes.html
+++ b/employes.html
@@ -193,7 +193,7 @@
 
           <div class="team-details">
             <img src="images/zafar.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Zafar Chuhan</h3>
+            <h3 class="team-name">Zafar Yasin</h3>
             <p class="team-position">Inventory Manager</p>
           </div>
         </div>
@@ -339,7 +339,7 @@
           <div class="team-details">
             <img src="images/a10.jpg" alt="" class="team-img" />
             <h3 class="team-name">Rafaqat Rasheed</h3>
-            <p class="team-position">Rent agent</p>
+            <p class="team-position">Rent Agent</p>
           </div>
 
           <div class="team-details">
