--- a/index.html
+++ b/index.html
@@ -618,9 +618,9 @@
                     <div class="reviews-content">
                       <p>
                         Selling my home with Chaudhry Estate was a smooth and
-                        efficient experience. Teams expertise and clear
-                        communication made all the difference. They handled
-                        everything with professionalism, making me feel
+                        efficient experience. Shahnawaz Teams expertise and
+                        clear communication made all the difference. They
+                        handled everything with professionalism, making me feel
                         supported throughout.
                       </p>
                       <div class="details">
@@ -639,7 +639,7 @@
                     <div class="reviews-content">
                       <p>
                         As a first-time homebuyer, I was so grateful for the
-                        patience and guidance from Shazad at Chaudhry Estate.
+                        patience and guidance from Shazaib at Chaudhry Estate.
                         They explained everything clearly and never pressured
                         me. I ended up with a home I love, thanks to their
                         expert help
@@ -702,9 +702,10 @@
                       <p>
                         I recently had the pleasure of working with Chaudhry
                         Estate for my home buying journey, and I couldn't be
-                        happier with the service I received. The team was
-                        incredibly knowledgeable, patient, and dedicated to
-                        finding the perfect property that met all my needs.
+                        happier with the service I received. Sheraz with his
+                        team was incredibly knowledgeable, patient, and
+                        dedicated to finding the perfect property that met all
+                        my needs.
                       </p>
                       <div class="details">
                         <div class="imgbox">
@@ -722,7 +723,7 @@
                     <div class="reviews-content">
                       <p>
                         Chaudhry Estate exceeded all my expectations in selling
-                        my property. From the very beginning, their team
+                        my property. From the very beginning, Asim and his team
                         demonstrated an exceptional level of expertise and
                         customer care. They provided a comprehensive market
                         analysis,
