--- a/employes.html
+++ b/employes.html
@@ -165,9 +165,9 @@
             <p class="team-position">Booking Specialist</p>
           </div>
 
-          <div class="team-details">
-            <img src="images/shahzaib.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Chaudhry Shahzaib</h3>
+          <div class="team-details2">
+            <img src="images/bankar jevan.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Bankar Jeevan</h3>
             <p class="team-position">Rent/Sale Specialist</p>
           </div>
 
@@ -178,11 +178,10 @@
             <p class="team-position">Sale/Rent</p>
           </div>
 
-          <div class="team-details2">
-            <img src="images/bankar jevan.jpg" alt="" class="banker" />
-            <h3 class="team-name">Bankar Jeevan</h3>
-            <p class="team-position">Specialist</p>
-            <p class="team-position">Sale/Rent</p>
+          <div class="team-details">
+            <img src="images/shahzaib.jpg" alt="" class="banker" />
+            <h3 class="team-name">Chaudhry Shazaib</h3>
+            <p class="team-position">Sale/Rent Specialist</p>
           </div>
 
           <div class="team-details">
@@ -319,6 +318,12 @@
           </div>
 
           <div class="team-details">
+            <img src="images/dummy.png" alt="" class="team-img" />
+            <h3 class="team-name">Mohsen Sheikh</h3>
+            <p class="team-position">Sale/Rent Specialist</p>
+          </div>
+
+          <div class="team-details">
             <img src="images/a6.jpg" alt="" class="team-img" />
             <h3 class="team-name">Gohar Bhatti</h3>
             <p class="team-position">Specialist Rent/Sale</p>
@@ -346,12 +351,6 @@
             <img src="images/a7.jpg" alt="" class="team-img" />
             <h3 class="team-name">Zain Samejo</h3>
             <p class="team-position">Office Boy</p>
-          </div>
-
-          <div class="team-details">
-            <img src="images/dummy.png" alt="" class="team-img" />
-            <h3 class="team-name">Mohsen Sheikh</h3>
-            <!-- <p class="team-position">Office Boy</p> -->
           </div>
         </div>
       </div>
