--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                     <div class="reviews-content">
                       <p>
                         Selling my home with Chaudhry Estate was a smooth and
-                        efficient experience. Shahnawaz Teams expertise and
+                        efficient experience. Shahnawaz's Team expertise and
                         clear communication made all the difference. They
                         handled everything with professionalism, making me feel
                         supported throughout.
