--- a/employes.html
+++ b/employes.html
@@ -209,6 +209,7 @@
             <img src="images/team8.jpg" alt="" class="team-img" />
             <h3 class="team-name">Chaudhry Shahnawaz</h3>
             <p class="team-position">Marketing Director</p>
+            <p class="team-position">&</p>
             <p class="team-position">Property Consultant</p>
           </div>
 
