added zameen.com links

--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
                 <h2>Buy a property</h2>
                 <p>Find where “perfect” meets “happy”</p>
               </div>
-              <a href="#" class="boxes-btn button">Browse Properties</a>
+              <a
+                href="https://www.zameen.com/Homes/Karachi-2-1.html?agent_id=162470&sort=price_desc"
+                class="boxes-btn button"
+                >Browse Properties</a
+              >
             </div>
 
             <div class="boxes-container">
@@ -117,7 +121,11 @@
                 <h2>Sell a property</h2>
                 <p>Get the best value in any economy</p>
               </div>
-              <a href="#" class="boxes-btn button">Browse Properties</a>
+              <a
+                href="https://www.zameen.com/Homes/Karachi-2-1.html?agent_id=162470"
+                class="boxes-btn button"
+                >Browse Properties</a
+              >
             </div>
 
             <div class="boxes-container">
@@ -127,7 +135,11 @@
               <div class="box-data">
                 <h2>Rent a property</h2>
                 <p>Live where you can love</p>
-                <a href="#" class="boxes-btn button">Find Rentals</a>
+                <a
+                  href="https://www.zameen.com/Rentals/Karachi-2-1.html?agent_id=162470&sort=price_desc"
+                  class="boxes-btn button"
+                  >Find Rentals</a
+                >
               </div>
             </div>
           </div>
@@ -156,48 +168,72 @@
               <article class="popular__card swiper-slide">
                 <img src="images/home1.jpg" alt="" class="popular__img" />
                 <div class="popular__data">
-                  <h2 class="popular__price"><span>PKR</span> 20,000,000</h2>
-                  <h3 class="popular__title">Karachi, Bharia housing</h3>
+                  <h2 class="popular__price"><span>PKR</span> 50 Crore</h2>
+                  <h3 class="popular__title">Malir, Karachi, Sindh</h3>
                   <p class="popular__description">
-                    5 Bedrooms with open kitchen. Fully furnished, recently
-                    painted, and all wooden. Small pool in the garden to give
-                    the house an asthetic look...
+                    Pls note details for 2.0 Acre plot in Malir. Land Area: 2.0
+                    Acre Status: 99 years leasehold, Form 7 Power: 341 KW
+                    connected load with Self Financed PMT...
                   </p>
                 </div>
-                <a href="#" target="_blank" class="button popular__button"
+                <a
+                  href="https://www.zameen.com/Property/karachi_malir_factory_for_sale-49740789-476-3.html"
+                  target="_blank"
+                  class="button popular__button"
                   >View more</a
                 >
               </article>
 
               <article class="popular__card swiper-slide">
-                <img src="images/r1.webp" alt="" class="popular__img" />
+                <img
+                  src="images/house/sale1.jpeg"
+                  alt=""
+                  class="popular__img"
+                />
                 <div class="popular__data">
-                  <h2 class="popular__price"><span>PKR</span> 90,000,000</h2>
-                  <h3 class="popular__title">Karachi, Bharia housing</h3>
+                  <h2 class="popular__price"><span>PKR</span> 28 Crore</h2>
+                  <h3 class="popular__title">Gulshan-e-Iqbal Town...</h3>
                   <p class="popular__description">
-                    5 Bedrooms with open kitchen. Fully furnished, recently
-                    painted, and all wooden. Small pool in the garden to give
-                    the house an asthetic look...
+                    1200 Square Yard Old Well Maintained 2 side Corner Bungalow
+                    at Oversease Cooperative Housing Society...
                   </p>
                 </div>
-                <a href="#" target="_blank" class="button popular__button"
+                <a
+                  href="https://www.zameen.com/Property/gulshan_e_iqbal_town_bahadurabad_corner_bungalow_for_sale-49167766-524-1.html"
+                  target="_blank"
+                  class="button popular__button"
                   >View more</a
                 >
               </article>
 
               <article class="popular__card swiper-slide">
-                <img src="images/r2.webp" alt="" class="popular__img" />
+                <img
+                  src="images/house/sale2.webp"
+                  alt=""
+                  class="popular__img"
+                />
                 <div class="popular__data">
-                  <h2 class="popular__price"><span>PKR</span> 5,000,000</h2>
-                  <h3 class="popular__title">Karachi, Bharia housing</h3>
+                  <h2 class="popular__price"><span>PKR</span> 27 Crore</h2>
+                  <h3 class="popular__title">Gulshan-e-Iqbal Town...</h3>
                   <p class="popular__description">
-                    5 Bedrooms with open kitchen. Fully furnished, recently
-                    painted, and all wooden. Small pool in the garden to give
-                    the house an asthetic look...
+                    Oversease Cooperative Housing Society, Alamgheer Road,
+                    Bahadurabad, Corner Bungalow...
                   </p>
                 </div>
-                <a href="#" class="button popular__button">View more</a>
+                <a
+                  href="https://www.zameen.com/Property/gulshan_e_iqbal_town_bahadurabad_west_open_corner_1200_sq_yards_house_for_sale-49729891-524-1.html"
+                  class="button popular__button"
+                  >View more</a
+                >
               </article>
+            </div>
+            <div>
+              <a
+                href="https://www.zameen.com/Homes/Karachi-2-1.html?agent_id=162470&sort=price_desc"
+                class="button popular__button2"
+                target="_blank"
+                >View All</a
+              >
             </div>
           </div>
         </div>
@@ -212,50 +248,80 @@
           <div class="popular__container swiper">
             <div class="swiper-wrapper-container">
               <article class="popular__card swiper-slide">
-                <img src="images/home1.jpg" alt="" class="popular__img" />
+                <img
+                  src="images/house/rent1.webp"
+                  alt=""
+                  class="popular__img"
+                />
                 <div class="popular__data">
-                  <h2 class="popular__price"><span>PKR</span> 20,000,000</h2>
-                  <h3 class="popular__title">Karachi, Bharia housing</h3>
+                  <h2 class="popular__price"><span>PKR</span> 10 Lakh</h2>
+                  <h3 class="popular__title">DHA Defence, Karachi...</h3>
                   <p class="popular__description">
-                    5 Bedrooms with open kitchen. Fully furnished, recently
-                    painted, and all wooden. Small pool in the garden to give
-                    the house an asthetic look...
+                    Fully Furnished Bungalow Available For Long And Short Term
+                    Having...
                   </p>
                 </div>
-                <a href="#" target="_blank" class="button popular__button"
+                <a
+                  href="https://www.zameen.com/Property/dha_defence_dha_phase_6_1000_sq_yard_fully_furnished_bungalow_available_for_short_and_long_term-49759573-1483-4.html"
+                  target="_blank"
+                  class="button popular__button"
                   >View more</a
                 >
               </article>
 
               <article class="popular__card swiper-slide">
-                <img src="images/r1.webp" alt="" class="popular__img" />
+                <img
+                  src="images/house/rent2.webp"
+                  alt=""
+                  class="popular__img"
+                />
                 <div class="popular__data">
-                  <h2 class="popular__price"><span>PKR</span> 90,000,000</h2>
-                  <h3 class="popular__title">Karachi, Bharia housing</h3>
+                  <h2 class="popular__price"><span>PKR</span> 9.95 Lakh</h2>
+                  <h3 class="popular__title">DHA Defence, Karachi, Sindh</h3>
                   <p class="popular__description">
-                    5 Bedrooms with open kitchen. Fully furnished, recently
-                    painted, and all wooden. Small pool in the garden to give
-                    the house an asthetic look...
+                    DHA PHASE 6 <br />
+                    FULLY FURNISHED <br />
+                    BUNGALOW FOR RENT <br />
+                    1000 YARD <br />
+                    2+4 BEDROOMS
                   </p>
                 </div>
-                <a href="#" target="_blank" class="button popular__button"
+                <a
+                  href="https://www.zameen.com/Property/dha_defence_dha_phase_6_luxury_owner_built_1000_yard_fully_furnished_bungalow_for_rent-50187909-1483-4.html"
+                  target="_blank"
+                  class="button popular__button"
                   >View more</a
                 >
               </article>
 
               <article class="popular__card swiper-slide">
-                <img src="images/r2.webp" alt="" class="popular__img" />
+                <img
+                  src="images/house/rent3.webp"
+                  alt=""
+                  class="popular__img"
+                />
                 <div class="popular__data">
-                  <h2 class="popular__price"><span>PKR</span> 5,000,000</h2>
-                  <h3 class="popular__title">Karachi, Bharia housing</h3>
+                  <h2 class="popular__price"><span>PKR</span> 7.5 Lakh</h2>
+                  <h3 class="popular__title">DHA Defence, Karachi...</h3>
                   <p class="popular__description">
-                    5 Bedrooms with open kitchen. Fully furnished, recently
-                    painted, and all wooden. Small pool in the garden to give
-                    the house an asthetic look...
+                    *BUNGALOE FOR RENT* *DHA* Phase v 800 yards 6 bedroom
+                    *FULLY...
                   </p>
                 </div>
-                <a href="#" class="button popular__button">View more</a>
+                <a
+                  href="https://www.zameen.com/Property/dha_defence_dha_phase_6_full_furnish_bungalow_for_rent-50972997-1483-4.html"
+                  class="button popular__button"
+                  >View more</a
+                >
               </article>
+            </div>
+            <div>
+              <a
+                href="https://www.zameen.com/Rentals/Karachi-2-1.html?agent_id=162470&sort=price_desc"
+                class="button popular__button2"
+                target="_blank"
+                >View All</a
+              >
             </div>
           </div>
         </div>
