added new phone

--- a/index.html
+++ b/index.html
@@ -607,12 +607,12 @@
                   <i class="ri-phone-fill"></i>
                   <div>
                     <h3 class="contact__card-title">Call</h3>
-                    <p class="contact__card-description">03331372497</p>
+                    <p class="contact__card-description">(021) 35169915</p>
                   </div>
                 </div>
 
                 <button class="button contact__card-button">
-                  <a href="https://wa.me/+923331372497">Call now</a>
+                  <a href="https://wa.me/02135169915">Call now</a>
                 </button>
               </div>
 
