--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <img src="images/boxes1.jpg" alt="" />
               </div>
               <div class="box-data">
-                <h2>Buy a property</h2>
+                <h2>Find Buyer</h2>
                 <p>Find where “perfect” meets “happy”</p>
               </div>
               <a
@@ -118,7 +118,7 @@
                 <img src="images/boxes2.jpg" alt="" />
               </div>
               <div class="box-data">
-                <h2>Sell a property</h2>
+                <h2>Find Seller</h2>
                 <p>Get the best value in any economy</p>
               </div>
               <a
@@ -133,7 +133,7 @@
                 <img src="images/boxes3.jpg" alt="" />
               </div>
               <div class="box-data">
-                <h2>Rent a property</h2>
+                <h2>Buy Rentals</h2>
                 <p>Live where you can love</p>
                 <a
                   href="https://www.zameen.com/Rentals/Karachi-2-1.html?agent_id=162470&sort=price_desc"
