chnaged necessary things

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <img src="images/boxes1.jpg" alt="" />
               </div>
               <div class="box-data">
-                <h2>Buy a property</h2>
+                <h2>Find Buyers</h2>
                 <p>Find where “perfect” meets “happy”</p>
               </div>
               <a
@@ -118,7 +118,7 @@
                 <img src="images/boxes2.jpg" alt="" />
               </div>
               <div class="box-data">
-                <h2>Sell a property</h2>
+                <h2>Find Sellers</h2>
                 <p>Get the best value in any economy</p>
               </div>
               <a
@@ -133,12 +133,12 @@
                 <img src="images/boxes3.jpg" alt="" />
               </div>
               <div class="box-data">
-                <h2>Rent a property</h2>
+                <h2>Find Rentals</h2>
                 <p>Live where you can love</p>
                 <a
                   href="https://www.zameen.com/Rentals/Karachi-2-1.html?agent_id=162470&sort=price_desc"
                   class="boxes-btn button"
-                  >Find Rentals</a
+                  >Browse Properties</a
                 >
               </div>
             </div>
@@ -494,11 +494,7 @@
                 </div>
               </div>
             </div>
-            <a
-              href="certificates.html"
-              target="_blank"
-              class="button value__button"
-            >
+            <a href="certificates.html" class="button value__button">
               Our certificates
             </a>
           </div>
@@ -630,17 +626,19 @@
                 </button>
               </div>
 
-              <div class="contact__card-box">
+              <div class="contact__card-box longer-contact_card">
                 <div class="contact__card-info">
                   <i class="ri-mail-unread-fill"></i>
                   <div>
-                    <h3 class="contact__card-title">Message</h3>
-                    <p class="contact__card-description">03331372497</p>
+                    <h3 class="contact__card-title">Mail</h3>
+                    <p class="contact__card-description">
+                      chaudhryestate@gmail.com
+                    </p>
                   </div>
                 </div>
 
                 <button class="button contact__card-button">
-                  <a href="contact.html">Message Now </a>
+                  <a href="contact.html">Mail Us</a>
                 </button>
               </div>
             </div>
@@ -670,7 +668,7 @@
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/dummy.png" alt="" />
+                          <img src="images/face9.jpg" alt="" />
                         </div>
                         <h3>Dr Naseem Ahmed</h3>
                       </div>
@@ -691,7 +689,7 @@
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/dummy.png" alt="" />
+                          <img src="images/face10.jpg" alt="" />
                         </div>
                         <h3>Jagadesh Kumar</h3>
                       </div>
@@ -712,7 +710,7 @@
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/dummy.png" alt="" />
+                          <img src="images/face13.jpg" alt="" />
                         </div>
                         <h3>Dr Baksh Jammal</h3>
                       </div>
@@ -732,7 +730,7 @@
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/dummy.png" alt="" />
+                          <img src="images/face7.jpg" alt="" />
                         </div>
                         <h3>Aamir Ahmed</h3>
                       </div>
@@ -753,7 +751,7 @@
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/dummy.png" alt="" />
+                          <img src="images/face8.webp" alt="" />
                         </div>
                         <h3>Kishwar Yousafzai</h3>
                       </div>
@@ -775,7 +773,7 @@
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/dummy.png" alt="" />
+                          <img src="images/face11.jpg" alt="" />
                         </div>
                         <h3>Najib Arshad </h3>
                       </div>
@@ -796,7 +794,7 @@
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/dummy.png" alt="" />
+                          <img src="images/face12.jpg" alt="" />
                         </div>
                         <h3>Valeed Ali</h3>
                       </div>
@@ -818,11 +816,7 @@
             Subscribe and find super attractive price quotes and discounts from
             our team, Determine your residence immediately
           </p>
-          <a
-            href="contact.html"
-            target="_blank"
-            class="button button__subscribe"
-          >
+          <a href="contact.html" class="button button__subscribe">
             Get Started
           </a>
         </div>
