--- a/employes.html
+++ b/employes.html
@@ -48,7 +48,7 @@
             </li>
             <li class="nav__item">
               <a href="employes.html" class="nav__link">
-                <i class="ri-award-fill"></i>
+                <i class="ri-team-fill"></i>
                 <span>Team</span>
               </a>
             </li>
